# Backend-trainee-assignment-autumn-2025

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  openapi.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7b17c974177e_init.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: health.py  pull_requests.py  stats.py  teams.py  users.py
app/core/: cache.py  config.py  database.py  exceptions.py
app/db/: models.py
app/db/repositories/: base.py  pr_repository.py  team_repository.py  user_repository.py
app/domain/: base_service.py  dependencies.py
app/domain/pull_requests/: service.py
app/domain/stats/: service.py
app/domain/teams/: service.py
app/domain/users/: service.py
app/schemas/: pr.py  stats.py  team.py  user.py
tests/: conftest.py  test_integration.py  test_load.py  test_pull_requests.py  test_teams.py  test_users.py  test_users_endpoints.py
